--- a/重构/index.html
+++ b/重构/index.html
@@ -16,7 +16,9 @@
     <link rel="stylesheet" type="text/css" href="vendor/dragslideshow/css/dragslideshow.css">
     <link rel="stylesheet" type="text/css" href="css/navitem.css">
     <link rel="stylesheet" type="text/css" href="css/forum.css">
+    <link rel="stylesheet" type="text/css" href="css/perform.css">
     <link rel="stylesheet" type="text/css" href="css/history.css">
+    <link rel="stylesheet" type="text/css" href="css/map.css">
     <link rel="stylesheet" type="text/css" href="css/common.css">
 </head>
 
@@ -53,7 +55,7 @@
         <ul>
             <li><img src="image/logo/map.png" id="pic_map" title="地图" /><p>地图</p></li>
             <li><img src="image/logo/zhou.png" id="pic_zhou" title="历史" /><p>历史</p></li>
-            <li><img src="image/logo/diy.png" id="pic_diy" title="DIY" /><p>DIY</p></li>
+            <li><img src="image/logo/diy.png" id="pic_diy" title="戏台" /><p>戏台</p></li>
         </ul>
     </div>
     <!-- Page -->
@@ -61,62 +63,119 @@
         <!-- 图片 -->
         <div class="section" id="sec_pic">
             <div class="slide" id="img1">
-                <div class="bg-image">
-                    <img src="image/background/pic_index.jpg" />
-                </div>
                 <div class="stage">
-                    <h1>图片1</h1>
+                    <h1>在皮影集市</h1>
+                    <p>全国的某些地方至今保留着皮影市场，</p>
+                    <p>这是对皮影艺术的极大尊崇。</p>
                 </div>
             </div>
             <div class="slide" id="img2">
                 <div class="stage">
-                    <h1>图片2</h1>
+                    <h1>民间的皮影</h1>
+                    <p>民间的皮影艺术，</p>
+
+                    <p>   总是以朴实无华的形式而存在着。</p>
+
                 </div>
             </div>
             <div class="slide" id="img3">
                 <div class="stage">
-                    <h1>图片3</h1>
+                    <h1>牛郎和织女</h1>
+                    <p>牛郎织女的爱情故事，</p>
+                    <p>即使在皮影艺术中也表现得淋漓尽致。</p>
                 </div>
             </div>
             <div class="slide" id="img4">
                 <div class="stage">
-                    <h1>图片4</h1>
+                    <h1>海外皮影</h1>
+                    <p>东南亚的皮影纵使和大陆地区的演出形式相仿，</p>
+                    <p>但其丰富的人物表现是与大陆地区有所不同的。</p>
                 </div>
             </div>
             <div class="slide" id="img5">
                 <div class="stage">
-                    <h1>图片5</h1>
+                    <h1>皮影戏具</h1>
+                    <p>皮影的演出方式风格迥异，</p>
+                    <p>这就直接导致了其戏具的复杂和多样。</p>
                 </div>
             </div>
         </div>
         <!-- 视频 -->
         <div class="section" id="sec_mov">
             <div class="slide" id="mov1">
-                <div class="bg-image">
-                    <img src="image/background/pic_map.jpg" />
-                </div>
                 <div class="stage">
-                    <h1>视频1</h1>
+                    <video loop>
+                        <source src="video/1.webm" type="video/webm" />
+                        <source src="video/1.mp4" type="video/mp4" />
+                    </video>
                 </div>
             </div>
             <div class="slide" id="mov2">
                 <div class="stage">
-                    <h1>视频2</h1>
+                    <video loop>
+                        <source src="video/1.webm" type="video/webm" />
+                        <source src="video/1.mp4" type="video/mp4" />
+                    </video>
                 </div>
             </div>
             <div class="slide" id="mov3">
                 <div class="stage">
-                    <h1>视频3</h1>
+                    <video loop>
+                        <source src="video/1.webm" type="video/webm" />
+                        <source src="video/1.mp4" type="video/mp4" />
+                    </video>
                 </div>
             </div>
             <div class="slide" id="mov4">
                 <div class="stage">
-                    <h1>视频4</h1>
+                    <video loop>
+                        <source src="video/1.webm" type="video/webm" />
+                        <source src="video/1.mp4" type="video/mp4" />
+                    </video>
                 </div>
             </div>
             <div class="slide" id="mov5">
                 <div class="stage">
-                    <h1>视频5</h1>
+                    <video loop>
+                        <source src="video/1.webm" type="video/webm" />
+                        <source src="video/1.mp4" type="video/mp4" />
+                    </video>
+                </div>
+            </div>
+        </div>
+        <!-- 地图 -->
+        <div class="section" id="sec_map">
+            <div class="map">
+                <img src="image/map/map.png" />
+            </div>
+            <div class="stage">
+                <img src="image/map/dfts.png" />
+                <div class="map-line"></div>
+                <div class="map-content">
+                    <p>中国传统皮影戏历史绵延两千年以上，流传极广，遍布华北，西北，华南，华东各省。因地区的差异，又形成了许多不同的艺术风格。</p>
+                </div>
+            </div>
+            <div class="stage-hide">
+                <div class="stage-image"><img src="image/map/tspy.png" /></div>
+                <div>
+                    <div id="map_info" class="map-content">
+                        <p>
+                            【概述】
+                        </p><p>
+                            唐山皮影是滦州影系的代表。唐山皮影就以滦州和乐亭皮影最为有名。民间有称“滦州影”，也有称“乐亭影”的。当地皮影起源于明代(公元16世纪)。传说乐亭县秀才黄素志落第，将演于河北西部的皮影戏带回故乡，编演一些“宣扬教化”的剧目，这就是乐亭皮影。
+                        </p><p>【造型】</p><p>
+                            皮影选用了具有透明度高，且质地强、韧、柔、结实耐用等特点的驴皮来制作影偶，因此又称“驴皮影”。滦州影在造型上吸收其西城派的长处，融合了窗花、剪纸和民间年画的艺术特点，极富民间风味，在中国的皮影艺术中占有突出的地位，同时也在我国的装饰美术中占有很重要的地位。女性造型从额头到鼻尖一条斜线，形成通天鼻，眉和眼角上翘，上下唇略突出。下巴和腮部略尖，整个脸清秀、清贵，带有明清仕女的模样。
+                        </p><p>【唱腔】</p><p>
+                            唐山皮影唱腔以乐亭方言为基础。在没有正式形成声腔艺术之前， 只有说白哼唱，到了明清，皮影已有戏曲唱腔形式，清咸丰年间，当地艺人发明了掐嗓唱法，用手控制声带，使声音有高有低。唱腔分为平调、花调、凄凉调、悲调与还阳调等。平调是一种朴实无华的唱腔，花调多为旦行所用，悲调适于各种角色表达悲痛之情，而凄凉调为旦角专用。
+                        </p>
+                    </div>
+                    <!--<div data-spy="scroll" data-target="#map_info" class="map-scroll">
+                        <ul>
+                            <li class="active">概述<span class="map-dot"></span></li>
+                            <li>造型</li>
+                            <li>概述</li>
+                        </ul>
+                    </div>-->
                 </div>
             </div>
         </div>
@@ -151,7 +210,7 @@
                         </div>
                     </div>
                     <div class="item">
-                        <img src="image/history/history-3.png" />
+                        <img src="image/history/history-4.png" />
                         <div class="carousel-caption">
                             明代是皮影的一个重要时期，这个时期内影戏完成了两个使命：一是皮影的流派相继成熟；二是皮影的对外传播加强。随着政治中心的北移，皮影在河北一带发展迅速。永乐、万历年间，由于江南、湖广、四川等地屯军边疆的原因，皮影流入云南等地，和当地的艺术形式结合，在唱腔、脸谱和美术制作上形成独特的风格。
                         </div>
@@ -159,12 +218,80 @@
                     <div class="item">
                         <img src="image/history/history-2.png" />
                         <div class="carousel-caption">
-                            清代和民国期间是中国影戏发展史上的第二次高峰，皮影戏到达了全国大部分的省份。清军入关后，由于满人非常喜爱看影戏，八旗王府中有专设的影戏道具，艺人常常被王公贝勒邀请到王府中表演，叫做“宫影戏”。这一时期出现另外两种班社：一是王府戏班，一是富豪家班，清代后期又产生了影戏茶馆。<br/>
+                            清代和民国期间是中国影戏发展史上的第二次高峰，皮影戏到达了全国大部分的省份。清军入关后，由于满人非常喜爱看影戏，八旗王府中有专设的影戏道具，艺人常常被王公贝勒邀请到王府中表演，叫做“宫影戏”。这一时期出现另外两种班社：一是王府戏班，一是富豪家班，清代后期又产生了影戏茶馆。<br />
                             民国时期皮影呈衰颓之状，从事皮影表演的人减少。抗日战争中，福建漳州以皮影戏的形式宣传抗日救国，演遍漳州市，深受欢迎。1943年中共冀东特委组织苏旭、张茂兰等著名艺人，成立了新长城影社，创新剧目《玉田从军》、《光明之路》、《血泪仇》等，宣传了抗敌斗争。
 
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+        <!-- 戏台 -->
+        <div class="section" id="sec_diy">
+            <div class="stage">
+                <div id="player1">
+                    <div id="bodies">
+                        <img src="image/perform/1-身子.png" id="img1_bodies">
+                    </div>
+                    <div id="hand">
+                        <img src="image/perform/1-右手.png" id="img1_hand">
+                    </div>
+                    <div id="left_foot">
+                        <img src="image/perform/1-左脚 copy.png" id="img1_left_foot">
+                    </div>
+                    <div id="right_foot">
+                        <img src="image/perform/1-右脚 copy.png" id="img1_right_foot">
+                    </div>
+                </div>
+                <div id="player2">
+                    <div id="bodies2">
+                        <img src="image/perform/2-全身.png" id="img2_bodies">
+                    </div>
+                    <div id="hand2">
+                        <img src="image/perform/2-右手.png" id="img2_hand">
+                    </div>
+
+                </div>
+                <div id="player3">
+                    <div id="player1_left_hand">
+                        <img src="image/perform/3-左臂.png" id="img1_left_hand">
+                    </div>
+                    <div id="player1_bodies">
+                        <img src="image/perform/3-全身.png" id="img1_bodies">
+                    </div>
+                    <div id="player1_right_hand">
+                        <img src="image/perform/3-右臂.png" id="img1_right_hand">
+                    </div>
+                    <div id="player1_left_foot">
+                        <img src="image/perform/3-左脚.png" id="img2_left_foot">
+                    </div>
+                </div>
+                <div id="player4">
+                    <div id="player2_bodies">
+                        <img src="image/perform/4-全身.png" id="img3_bodies">
+                    </div>
+                    <div id="player2_right_hand">
+                        <img src="image/perform/4-手.png" id="img3_right_hand">
+                    </div>
+                    <div id="player2_left_foot">
+                        <img src="image/perform/4-左脚.png" id="img3_left_foot">
+                    </div>
+                </div>
+            </div>
+            <!--<div class="fixed-bottom">
+                <ul>
+                    <li><img src="image/perform/Circle-1.png" /></li>
+                    <li><img src="image/perform/Circle-3.png" /></li>
+                    <li><img src="image/perform/Circle-4.png" /></li>
+                    <li><img src="image/perform/Circle-2.png" /></li>
+                </ul>
+
+            </div>-->
+            <div class="fixed-bottom">
+                <div class="circle-1"><img src="image/perform/Circle-1.png" /></div>
+                <div class="circle-3"><img src="image/perform/Circle-3.png" /></div>
+                <div class="circle-4"><img src="image/perform/Circle-4.png" /></div>
+                <div class="circle-2"><img src="image/perform/Circle-2.png" /></div>
             </div>
         </div>
         <!-- 论坛 -->
@@ -236,6 +363,25 @@
                                 <h2>专</h2>
                                 <h2>业</h2>
                             </div>
+                            <p style="margin-top: 50px">
+                                在这百行兴起的年代，
+
+                                小耍的表演，
+
+                                只能被灰色记载。
+
+                                精湛的技艺，
+
+                                在空空的舞台上，
+
+                                仅存寂寞的声音交伴着掉色的皮。
+
+                                ……
+
+                                明天，
+
+                                又该去哪儿飞？
+                            </p>
                             <img class="bg-img-profession" src="image/forum/bg-profession.png" />
                         </div>
                     </div>
@@ -282,34 +428,32 @@
             <div class="handle">
                 <div class="slide current" data-content="content-1">
                     <div class="img-wrap">
-                        <img class="main1" alt="img1" src="imgs/Pic-main-1.jpg">
+                        <img class="main1" alt="img1" src="image/navbar/pic.jpg">
                     </div>
-                    <h2>图片</h2>
-
+                    <h2>· 在皮影集市&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;· 海外的皮影<br />· 民间皮影&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;· 皮影戏具<br />· 牛郎和织女</h2>
                 </div>
                 <div class="slide" data-content="content-2">
-                    <div class="img-wrap"><img class="main1" alt="img2" src="imgs/Pic-main-2.jpg"></div>
-                    <h2>视频</h2>
-
+                    <div class="img-wrap"><img class="main1" alt="img2" src="image/navbar/video.jpg"></div>
+                    <h2>· 小生<br />· 小旦</h2>
                 </div>
                 <div class="slide" data-content="content-3">
-                    <div class="img-wrap"><img class="main1" alt="img3" src="imgs/Pic-main-3.jpg"></div>
-                    <h2>地图</h2>
+                    <div class="img-wrap"><img class="main1" alt="img3" src="image/navbar/map.jpg"></div>
+                    <h2>· 地方皮影</h2>
 
                 </div>
                 <div class="slide" data-content="content-4">
-                    <div class="img-wrap"><img class="main1" alt="img4" src="imgs/Pic-main-4.jpg"></div>
-                    <h2>历史</h2>
+                    <div class="img-wrap"><img class="main1" alt="img4" src="image/navbar/history.jpg"></div>
+                    <h2>· 唐宋元明清</h2>
 
                 </div>
                 <div class="slide" data-content="content-5">
-                    <div class="img-wrap"><img alt="img5" src="img/5.jpg"></div>
-                    <h2>DIY</h2>
+                    <div class="img-wrap"><img alt="img5" src="image/navbar/stage.jpg"></div>
+                    <h2>· 戏台</h2>
 
                 </div>
                 <div class="slide" data-content="content-6">
-                    <div class="img-wrap"><img alt="img6" src="img/6.jpg"></div>
-                    <h2>论坛</h2>
+                    <div class="img-wrap"><img alt="img6" src="image/navbar/forum.jpg"></div>
+                    <h2>· 百科&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;· 专业<br />· 闲聊&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;· 活动</h2>
                 </div>
             </div>
         </section>
@@ -386,9 +530,10 @@
     <!-- 外部JS -->
     <script type="text/javascript" src="vendor/jquery/jquery-1.11.2.min.js"></script>
     <script type="text/javascript" src="vendor/jquery/jquery.slimscroll.min.js"></script>
+    <script type="text/javascript" src="vendor/jquery/jquery.rotate.min.js"></script>
     <script type="text/javascript" src="vendor/fullpage/js/jquery.fullPage.js"></script>
     <script type="text/javascript" src="vendor/modernizr/modernizr.custom.js"></script>
-    <script type="text/javascript" src="vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="vendor/bootstrap/js/bootstrap.js"></script>
     <script type="text/javascript" src="vendor/bootstrap/js/bootbox.js"></script>
 
     <!-- 导航JS -->
@@ -398,5 +543,6 @@
 
     <!-- 页面JS -->
     <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="js/perform.js"></script>
 </body>
 </html>
